--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongoose": "^7.2.2",
+    "mongoose": "^7.2.4",
     "node": "^20.2.0"
   }
 }
